add: day4 part1